--- a/parsed-data.html
+++ b/parsed-data.html
@@ -1,77 +1,5 @@
 <!--
-CUSTOM ELEMENT: parsed-data
-bY: DM
-
-Files can be refered to by "fkey", which is an integer provided by
-file-organiser.
-
-The current selection of files is held in the 'files' proeprty.
-When the user jumps somewhere in the file organiser, this 'files' object
-is updated.  This module then sends out null-ing notfications for the
-data which is no longer valid, but leaves whatever it can i.e. if we change
-tet but not trial, or cut but not tet we don't need to invalidate everything.
-
-On the io-worker thread we have a setImmediate "timer", which ensures that all pending messages from main thread
-are seen between each file-read operation.  We don't have such a timer on the set/tet/pos/cut threads.
-
-Caching...
-
-Note that this was designed and written with the expectation that MessageChannels could transfer arraybuffers,
-just like worker-main thread communication can. However in Chrome (and we only care about Chrome) this turns
-out not to be the case.  https://bugs.chromium.org/p/chromium/issues/detail?id=334408.  The workaround in use here
-is that rather than send a pre-read buffer from io-worker to tet/set/pos etc. workers, the file (handle) is sent, 
-the read takes place on the tet/set/pos etc. worker, and then a reply is immediately sent back to the io-worker,
-saying to continue with the next read operation.
-
-Main thread issues requests to io-worker thread, which in turn issues requests to set/cut/tet/pos threads.
-There is a buffer cache on tet/pos threads, which is managed by (i.e. add/delete instructions issued by)
-the io-worker.  And there is an entierly spearate parsed-data cache on the main thread, the various parts 
-of which are managed by the corresponding upstream workers (i.e. cut/set/tet/pos).
-
-Requests begin either when the user switches to a set-pos-tet-cut tuple, some of which may be null, and some of which
-may be uncahnged from the previous setting.  Or when the user changes the pos setttings, or changes which parts of the 
-tet file it needs (i.e. header, times, amps, gl_data).  The caching scheme alows the main thread to fulfill some
-of the request directly from its own cache, sending whatever remains to the io-worker as a single request.
-Any types (i.e. 'set', 'tet' etc.) in the request sent to the io-worker will overwrite the previous request for
-the given file type, with null being used to signify no-file (undefined is treated as though the type were absent).
-
-The io-worker knows exactly which files are already in the cache of the corresponding workers, and can immedaitely
-forward those requests.  Anything not in cache will be read off disk in a specific order of type priority (i.e.
-tet files should be read off disk first, then pos files...see code for the current logic used).  The workers, 
-when they receive requests from the io-thread know whether any of the requested parts is already in the main-thread's
-cache, and can avoid re-computing that.  
-
-To seee why this is all helpful, consider an indecisve user trying to load tet file a, then b, then a again, in very 
-quick succession.  By the time the user makes the third request, the main thread doesn't yet have the parsed data
-in its cahce, so it has to issue a full request to the io-worker.  The io-worker may have ended up loading file-a
-due to the first request, or it may never have bothered, instead loading file-b.  In the frist case (where it did
-load file-a), when the third request arrives, it knows that the tet worker currently has the buffer in its cache, so
- there's no need to load it again.  (Assuming the io-worker didn't request the buffer to be deleted from the
- tet's cache in the meantime - and if the io-worker had issued this request it would well know that the buffer wasn't in cache.)
- In the second case (where it didn't load file-a initally), the io-worker will now read it off disk and send it to
- the tet-worker to parse (and put in its cache).  Whichever of the two cases happend, the tet-worker will end up
-with a request to parse a buffer that it does indeed have access to.  However, if the file-a request made it through twice, then
-the tet-worker knows that it already sent data to the main-thread (and hasn't yet requested main thread to delte it
-from the cache) thus it knows that in fact main thread already has the data being requested, so there is no need
-to do anything.
-
-In summary, it's complciated!  Also, in summary, there is one cache on the main thread with fully-parsed results,
-and an entirely separate cache on the pos/tet threads, which contains raw buffers.  In both cases, the cache is
-manged by the upstream worker, which in the case of the tet/pos-worker is the io-worker, and in the case of the
-main thread is the tet/pos-worker.  Hopefully this arrangement ensures that if something is available in cache
-it's never redundantly laoded/computed de novo, and it also ensures that each request recived by tet/set/pos/cut
-worker can be processed at the point it is received (ie. without resorting to throwing messages backwards and 
-forwards to get data to where it needs to be), and it ensures that no data needs to be copied unneccasrily - it
-can all be transfered to its destination using transferable buffers.
-
-...well, there is a contrived scenario in which we don't end up with the optimal result, which is if the tet
-worker sends the required parsed data to main thread, after main threada has issued a second request for it,
-and then immediately afterwards the io-thread asks to delete the buffer from the tet cache..then the io-worker
-will mistakenly think it needs to load the data off disk in order for the tet worker to be able to return the
-results..but in fact, the main will get its data delivered, and the worker won't recompute it, so all that's
-bad here is that we laoded a file off disk when we didn't actually need it..and anyway it's probably more or 
-less impossible for the delete request to get into the chain in this way.
-
+See extensive explanation in the mai readme.
 
 Just to clarify, the workers do the following: 
     set - always sends header to main, cache uses fkey 
