sort by n_spikes

--- a/cut-object.html
+++ b/cut-object.html
@@ -641,6 +641,54 @@
             delete delta['src']; //we don't need these any more..
             delete delta['src_nums'];
 
+        }, sort: function(){
+            this._fork_if_needed();
+            // TODO: might want to accept a custom ordering rather than assuming n-order
+
+            let sorted_groups = this.groups.slice(0).sort(function(a,b){
+                return (a && b) ?  (a.n_spikes > b.n_spikes ? -1 : 1)
+                                :  (a ? -1 : 1);
+            });
+
+            // invert the mapping for use with _do_reorder
+            let move_to = [];
+            for(let [ii, g] of sorted_groups.entries())if(g){
+                move_to[g.group_num] = ii;
+            }
+
+            let delta = {
+                action: "reorder",
+                move_to: move_to
+            }
+
+            // this will re-invert the mapping for storage
+            this._do_reorder(delta);
+
+            this.undo_stack.push(delta);
+            this.push('undo_stack_descriptions', 'sort groups by n_spikes');
+            this.splice('redo_stack_descriptions', 0, this.redo_stack_descriptions.length); // clear
+            this.redo_stack.splice(0, this.redo_stack.length); // clear
+
+        }, _do_reorder: function(delta){
+            let new_groups = [];
+            let inverse_move_to = [];
+            for(let [ii, group_num] of delta.move_to.entries())if(group_num > 0 || group_num === 0){
+                new_groups[group_num] = this.groups[ii];
+                inverse_move_to[group_num] = ii;
+            }
+            delta.move_to = inverse_move_to;
+
+            for(let [ii, group] of new_groups.entries()){
+                if(group){
+                    group.group_num = ii; // update group_num for new ordering
+                }else{
+                    new_groups[ii] = null; //enforce null rather than undefined
+                }
+            }
+
+            // splice out everything, then splice it back in the right order
+            this.splice.apply(this, ['groups', 0, this.groups.length].concat(new_groups));
+
         }, undo: function(){
             var delta = this.undo_stack[this.undo_stack.length-1];
             var success = false;
@@ -676,6 +724,11 @@
 
                 case "transplant":
                 this._undo_transplant(delta); // it's complicated so it gets its own function
+                success = true;
+                break;
+
+                case "reorder":
+                this._do_reorder(delta); // will invert the delta
                 success = true;
                 break;
 
@@ -725,6 +778,11 @@
 
                 case "transplant":
                 this._do_transplant(delta); // it's complicated so it gets its own function
+                success = true;
+                break;
+
+                case "reorder":
+                this._do_reorder(delta); // will invert the delta
                 success = true;
                 break;
 
