fix waves show-toggling

--- a/cut-object.html
+++ b/cut-object.html
@@ -344,8 +344,8 @@
                 // for efficiency of notification, the rm is always changed in
                 // its entirerity, i.e. a new object is assigned.
                 n_spikes: inds.length,
-                tac: "",
-                waves: "",
+                tac: null,
+                waves: null,
                 rm: { 
                     spa_max: "",
                     dir_max: "",
