--- a/index_full.html
+++ b/index_full.html
@@ -400,7 +400,7 @@ background: #B1B1B1;
               width="auto"
               on-close="_close_grabbed_tile">
             <div class='pane_title'>[[item.title]]</div>
-            <tile-element group_model='[[item.group]]' group_num='[[item.group_num]]' class="noborder"></tile-element>
+            <tile-element group_model='[[item.group]]' group_num='[[item.group_num]]' class="noborder" style="min-width:100%;"></tile-element>
         </floating-pane>
     </template>
 
