--- a/managed-canvas.html
+++ b/managed-canvas.html
@@ -9,7 +9,7 @@ Polymer({
     is:'managed-canvas',
     properties: {
         ckey: {
-            type: String,
+            type: Object,
             value: "",
             observer: '_update'
         },
